Enable CI.