@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.teletha</groupId>
 	<artifactId>psychopath</artifactId>
-	<version>1.1.0</version>
+	<version>1.2.0</version>
 	<packaging>jar</packaging>
 	<name>psychopath</name>
 	<description/>
@@ -10,14 +10,14 @@
 		<dependency>
 			<groupId>com.github.teletha</groupId>
 			<artifactId>antibug</artifactId>
-			<version>1.0.2</version>
+			<version>[1.0.2,)</version>
 			<scope>test</scope>
 			<exclusions/>
 		</dependency>
 		<dependency>
 			<groupId>com.github.teletha</groupId>
 			<artifactId>sinobu</artifactId>
-			<version>2.2.0</version>
+			<version>[2.2.0,)</version>
 			<scope>compile</scope>
 			<exclusions/>
 		</dependency>
@@ -57,36 +57,16 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<compilerId>eclipse</compilerId>
-					<source>15</source>
-					<target>15</target>
-					<testSource>15</testSource>
-					<testTarget>15</testTarget>
 					<encoding>UTF-8</encoding>
+					<release>16</release>
 					<compilerArgs>
 						<arg>-proc:none</arg>
-						<arg>--enable-preview</arg>
 					</compilerArgs>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.codehaus.plexus</groupId>
-						<artifactId>plexus-compiler-eclipse</artifactId>
-						<version>2.8.8</version>
-					</dependency>
-					<dependency>
-						<groupId>org.eclipse.jdt</groupId>
-						<artifactId>ecj</artifactId>
-						<version>3.25.0</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
-				<configuration>
-					<argLine>--enable-preview</argLine>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
